elf: Replace .tls_common with .tbss definition [BZ #28152]

.tls_common is obsoleted, not supported by clang -fintegrated-as or ld.lld.
Just change it to .tbss for portability.